src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Opportunity_Reseller_acct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If the Opportunity is taking a channel partner route through a tier 1 reseller, please type in that reseller's name and click the magnify glass to select the correct name.</inlineHelpText>
        <label>Opportunity Reseller</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <infoMessage>Account must by Type: Partner</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Opportunity Reseller)</relationshipLabel>
        <relationshipName>Reseller_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Competitors__c</fullName>
        <label>Other Competitors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amazon</fullName>
                </value>
                <value>
                    <fullName>Cloudera</fullName>
                </value>
                <value>
                    <fullName>DataStax / Cassandra</fullName>
                </value>
                <value>
                    <fullName>Docker</fullName>
                </value>
                <value>
                    <fullName>GridGain</fullName>
                </value>
                <value>
                    <fullName>Hazelcast</fullName>
                </value>
                <value>
                    <fullName>Horton Works</fullName>
                </value>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>HP - Helion</fullName>
                </value>
                <value>
                    <fullName>HP - Vertica</fullName>
                </value>
                <value>
                    <fullName>Huawei</fullName>
                </value>
                <value>
                    <fullName>IBM</fullName>
                </value>
                <value>
                    <fullName>IBM - Bluemix</fullName>
                </value>
                <value>
                    <fullName>IBM - Netezza</fullName>
                </value>
                <value>
                    <fullName>Kubernetes</fullName>
                </value>
                <value>
                    <fullName>MapR</fullName>
                </value>
                <value>
                    <fullName>Mesos / Mesosphere</fullName>
                </value>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
                <value>
                    <fullName>Microsoft – Azure</fullName>
                </value>
                <value>
                    <fullName>Microsoft PDW / SQL Server</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>Oracle – Database</fullName>
                </value>
                <value>
                    <fullName>RedHat – OpenShift</fullName>
                </value>
                <value>
                    <fullName>Salesforce.com - Heroku</fullName>
                </value>
                <value>
                    <fullName>SAP – Hana</fullName>
                </value>
                <value>
                    <fullName>Teradata / Aster</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Indirect_Partner__c</fullName>
        <label>Other Indirect Partner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Influence_Partner__c</fullName>
        <label>Other Influence Partner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overview_Delivered_Comments__c</fullName>
        <label>Overview Delivered Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overview_Delivered_Date__c</fullName>
        <label>Overview Delivered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Overview_Schedule_Comments__c</fullName>
        <label>Overview Schedule Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overview_Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overview Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Employee_ID__c</fullName>
        <formula>Owner.EmployeeNumber</formula>
        <label>Owner Employee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_User_Create_Date__c</fullName>
        <formula>DATEVALUE(Owner.User_Create_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner User Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PCFS_Scoping_Delivered_to_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has PCFS scoping been delivered to the customer?</inlineHelpText>
        <label>PCFS Scoping Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCFS_Scoping_Scheduled_Date__c</fullName>
        <label>PCFS Scoping Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PCF_Consumption_Milestone__c</fullName>
        <description>Link to URL for this opportunity's Consumption Plan.</description>
        <inlineHelpText>Please provide a URL to the account specific consumption plan that is being maintained for this opportunity. Default location should be the Account Dashboard.</inlineHelpText>
        <label>PCF Consumption Milestone</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PCF_Consumption_Validated_By_Tech_Lead__c</fullName>
        <inlineHelpText>A consumption plan has been validated by the defined tech lead.</inlineHelpText>
        <label>PCF Consumption Validated By Tech Lead?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Tech_Lead_Validation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PCF_Involved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Pivotal tracker [#129097537]: CtC Validation for Labs and PCF Consumption

This field is used in Validation rule</description>
        <label>Does this engagement involve PCF?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRA_Pipeline_Amount__c</fullName>
        <inlineHelpText>Pivotal Ready Architecture VxRail Amount</inlineHelpText>
        <label>PRA Pipeline Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner_Attach_Type__c</fullName>
        <label>Partner Attach Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pivotal Sub Contract</fullName>
                </value>
                <value>
                    <fullName>Joint Solution</fullName>
                </value>
                <value>
                    <fullName>RFP/RFI Inclusion</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Notes__c</fullName>
        <label>Partner Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Product_Sold_Multiple__c</fullName>
        <description>This field will strive to measure the amount of Partner products/servers sold, expressed as a multiple of Pivotal booking amount.  Intended to be SWAG/directional</description>
        <inlineHelpText>This field will strive to measure the amount of Partner products/servers sold, expressed as a multiple of Pivotal booking amount.  Intended to be SWAG/directional</inlineHelpText>
        <label>Partner Product Sold Multiple</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt; 1x;</fullName>
                </value>
                <value>
                    <fullName>1-2x;</fullName>
                </value>
                <value>
                    <fullName>2-3x;</fullName>
                </value>
                <value>
                    <fullName>3-4x;</fullName>
                </value>
                <value>
                    <fullName>4-5x;</fullName>
                </value>
                <value>
                    <fullName>&gt;5x</fullName>
                </value>
                <value>
                    <fullName>1-3x;</fullName>
                    <isActive>false</isActive>
                    <label>1-3x;</label>
                </value>
                <value>
                    <fullName>1-4x;</fullName>
                    <isActive>false</isActive>
                    <label>1-4x;</label>
                </value>
                <value>
                    <fullName>1-5x;</fullName>
                    <isActive>false</isActive>
                    <label>1-5x;</label>
                </value>
                <value>
                    <fullName>1.1-2x;</fullName>
                    <isActive>false</isActive>
                    <label>1.1-2x;</label>
                </value>
                <value>
                    <fullName>2.1-3x;</fullName>
                    <isActive>false</isActive>
                    <label>2.1-3x;</label>
                </value>
                <value>
                    <fullName>3.1-4x;</fullName>
                    <isActive>false</isActive>
                    <label>3.1-4x;</label>
                </value>
                <value>
                    <fullName>4.1-5x;</fullName>
                    <isActive>false</isActive>
                    <label>4.1-5x;</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Product_Sold__c</fullName>
        <inlineHelpText>This field will help us measure the benefit to partner from the Pivotal transaction. This benefit can be Partner products or services (based on partner type)</inlineHelpText>
        <label>Partner Product Sold</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Project_Status__c</fullName>
        <label>Partner Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pipeline</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PivotalExecSponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pivotal Executive Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pivotal_Labs_Delivery_Office__c</fullName>
        <description>Tracks what delivery office the Labs engagement will be delivered from. For PCF deals, this will also track what office will deliver the Labs engagement if Labs was to be upsold.</description>
        <inlineHelpText>Please fill out which Pivotal Labs office will be delivering the project. For PCF opportunities, please fill out the delivery office if Labs was to be upsold.</inlineHelpText>
        <label>Pivotal Labs Delivery Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Beijing</fullName>
                </value>
                <value>
                    <fullName>Berlin</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Dearborn</fullName>
                </value>
                <value>
                    <fullName>Dublin</fullName>
                </value>
                <value>
                    <fullName>London</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>Palo Alto</fullName>
                </value>
                <value>
                    <fullName>Paris</fullName>
                </value>
                <value>
                    <fullName>San Francisco</fullName>
                </value>
                <value>
                    <fullName>Seattle</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Sydney</fullName>
                </value>
                <value>
                    <fullName>Tokyo</fullName>
                </value>
                <value>
                    <fullName>Toronto</fullName>
                </value>
                <value>
                    <fullName>Washington DC</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>AppTx</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pivotal_Labs_Engagement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Labs Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pivotal_Point_of_View_PoV__c</fullName>
        <inlineHelpText>Add details with this format:   Because of &lt;catalyst for change&gt;, Account must adapt to deliver &lt;business outcomes&gt;.   Pivotal uniquely enables &lt;technology outcomes&gt; as evidenced by &lt;customer stories&gt;</inlineHelpText>
        <label>Pivotal Point of View (PoV)</label>
        <length>550</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Platform_as_a_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cloud Strategy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Play_Validated_by_PA_Management__c</fullName>
        <inlineHelpText>"The Play" tracker detail has been validated by defined PA/FE management.</inlineHelpText>
        <label>Play Validated by PA Management?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Tech_Lead_Validation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prepay_Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Labs only. Tracks Labs discounts as we do not have a discount field for Labs within the product selector.</description>
        <inlineHelpText>Labs only. % discount off rack rate.</inlineHelpText>
        <label>Discount?</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Previous_Term_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Term Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Renewal Opportunities</relationshipLabel>
        <relationshipName>Renewal_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pricing_Justification__c</fullName>
        <label>Pricing Justification</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Competitor__c</fullName>
        <label>Primary Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amazon</fullName>
                </value>
                <value>
                    <fullName>Cloudera</fullName>
                </value>
                <value>
                    <fullName>DataStax / Cassandra</fullName>
                </value>
                <value>
                    <fullName>Docker</fullName>
                </value>
                <value>
                    <fullName>GridGain</fullName>
                </value>
                <value>
                    <fullName>Hazelcast</fullName>
                </value>
                <value>
                    <fullName>Horton Works</fullName>
                </value>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>HP - Helion</fullName>
                </value>
                <value>
                    <fullName>HP - Vertica</fullName>
                </value>
                <value>
                    <fullName>Huawei</fullName>
                </value>
                <value>
                    <fullName>IBM</fullName>
                </value>
                <value>
                    <fullName>IBM - Bluemix</fullName>
                </value>
                <value>
                    <fullName>IBM - Netezza</fullName>
                </value>
                <value>
                    <fullName>Kubernetes</fullName>
                </value>
                <value>
                    <fullName>MapR</fullName>
                </value>
                <value>
                    <fullName>Mesos / Mesosphere</fullName>
                </value>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
                <value>
                    <fullName>Microsoft – Azure</fullName>
                </value>
                <value>
                    <fullName>Microsoft PDW / SQL Server</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>Oracle – Database</fullName>
                </value>
                <value>
                    <fullName>RedHat – OpenShift</fullName>
                </value>
                <value>
                    <fullName>Salesforce.com - Heroku</fullName>
                </value>
                <value>
                    <fullName>SAP – Hana</fullName>
                </value>
                <value>
                    <fullName>Teradata / Aster</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_DE_FE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary Data Engineer or FE for BDS Play</description>
        <label>Primary DE/FE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OpportunitesPrimaryFE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_PA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary Platform Architect supporting the deal</description>
        <inlineHelpText>Primary Platform Architect supporting the deal</inlineHelpText>
        <label>Primary PA</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prime_Partner__c</fullName>
        <description>If "Partner" is selected in the Services Paperwork Prime picklist, fill in the name of the Partner.</description>
        <inlineHelpText>If "Partner" is selected in the Services Paperwork Prime picklist, fill in the name of the Partner.</inlineHelpText>
        <label>Prime Partner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Close_Date__c</fullName>
        <description>populated via workflow rule</description>
        <label>Prior Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Concat__c</fullName>
        <label>Product Concat</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Line_Count__c</fullName>
        <label>Product Line Count</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Proposal_URL__c</fullName>
        <description>Please enter the link to your Google Doc Slides here</description>
        <label>Proposal Slides</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Quarter_Start_Date_Date__c</fullName>
        <label>Quarter Start Date-Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quarter_Start_Date__c</fullName>
        <formula>CASE(
CEILING( MONTH(CloseDate) / 3 ),
1, DATE(Year(CloseDate), 1, 1),
2, DATE(Year(CloseDate), 4, 1),
3, DATE(Year(CloseDate), 7, 1),
4, DATE(Year(CloseDate), 10, 1),
DATE(Year(CloseDate), 1, 1)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason_Closed_Lost__c</fullName>
        <label>Reason Closed Lost</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Competition</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Features</fullName>
                </value>
                <value>
                    <fullName>Lost Funding</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Qualified Out</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region_autofill__c</fullName>
        <description>This field is the opportunity owner's Theater (From their user record).</description>
        <formula>TEXT(Owner.Theater__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Theater</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Years__c</fullName>
        <label>Renewal Years</label>
        <summarizedField>OpportunityLineItem.Year_Number__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Software_Type__c</field>
            <operation>equals</operation>
            <value>Subscription, Maintenance</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SI_Partner_Influence__c</fullName>
        <label>SI Partner Influence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Executive Intro (Access)</fullName>
                </value>
                <value>
                    <fullName>Co-Selling/Sell With (Leverage)</fullName>
                </value>
                <value>
                    <fullName>Partner-Led (APJ)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Order_Number__c</fullName>
        <label>Sales Order Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <formula>Owner.FirstName &amp; " " &amp;  Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scoping_Scheduled__c</fullName>
        <description>Labs only. Tracks what date the scoping session was completed (or will be completed on).</description>
        <inlineHelpText>Labs only. Please fill out what date the scoping will be done.</inlineHelpText>
        <label>Labs Scoping Scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Secondary_PA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Secondary Platform Architect supporting the deal</description>
        <inlineHelpText>Secondary Platform Architect supporting the deal</inlineHelpText>
        <label>Secondary PA</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selling_Booking_Influencer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>filtered lookup to Partner Accounts</description>
        <label>Selling/Booking Influencer</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You can only select a Partner Account here.</errorMessage>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <infoMessage>Select a Partner Account.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Selling/Booking Influenced Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Services_Amount_Quoted_Separately__c</fullName>
        <inlineHelpText>Please enter the Services amount you've quoted on a separate opportunity.</inlineHelpText>
        <label>Services Amount Quoted Separately</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Services_Channel__c</fullName>
        <label>Services Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Services_Partner__c</fullName>
        <label>Services Partner</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Services_Channel__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>CLD Partners</fullName>
                </value>
                <value>
                    <fullName>CNMconsulting</fullName>
                </value>
                <value>
                    <fullName>Core Info Tech</fullName>
                </value>
                <value>
                    <fullName>DFHeinz</fullName>
                </value>
                <value>
                    <fullName>Key Soft</fullName>
                </value>
                <value>
                    <fullName>LOGn</fullName>
                </value>
                <value>
                    <fullName>Mirantis</fullName>
                </value>
                <value>
                    <fullName>Newt Global</fullName>
                </value>
                <value>
                    <fullName>Open Source Architect</fullName>
                </value>
                <value>
                    <fullName>OpenCredo</fullName>
                </value>
                <value>
                    <fullName>Openscg</fullName>
                </value>
                <value>
                    <fullName>OSIntegrators</fullName>
                </value>
                <value>
                    <fullName>Smart Insight</fullName>
                </value>
                <value>
                    <fullName>Anika Systems</fullName>
                </value>
                <value>
                    <fullName>Armeta</fullName>
                </value>
                <value>
                    <fullName>zData</fullName>
                </value>
                <value>
                    <fullName>Teksystems</fullName>
                </value>
                <value>
                    <fullName>Signature</fullName>
                </value>
                <value>
                    <fullName>GD</fullName>
                </value>
                <value>
                    <fullName>Impetus</fullName>
                </value>
                <value>
                    <fullName>Think Big Analytics</fullName>
                </value>
                <value>
                    <fullName>Zaloni</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Services_Percentage_Of_Total_Deal__c</fullName>
        <label>Services Percentage Of Total Deal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sold_To_Country__c</fullName>
        <label>Sold To Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <label>Pivotal Offered Solution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Realtime Intelligence for Telco (RTI for Telco)</fullName>
                </value>
                <value>
                    <fullName>eDA (eDiscovery eArchive) - Formerly CCAP</fullName>
                </value>
                <value>
                    <fullName>Pivotal Network Intelligence</fullName>
                </value>
                <value>
                    <fullName>Enterprise Risk</fullName>
                </value>
                <value>
                    <fullName>Transzoom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spreadsheet_Key__c</fullName>
        <description>This field is related to a spreadsheet provide to Traction on 18Jul2013. Key is used as unique identifier.</description>
        <label>Spreadsheet Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StageNumber__c</fullName>
        <description>Numerical value for the StageName picklist, to aid in formulas</description>
        <formula>CASE(TEXT(StageName), 
"Prospecting", 1, 
"Qualification", 2, 
"Technical Validation", 3, 
"Business Validation", 4, 
"Agree to Purchase", 5, 
"Booked",6, 
"Closed Lost", 7, 0 )</formula>
        <label>StageNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_1_Date__c</fullName>
        <label>Stage 1 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Synergy_Partner_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Synergy Partner Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Synergy_Partner__c</fullName>
        <inlineHelpText>What Synergy Partner company has been involved with this deal?</inlineHelpText>
        <label>Synergy Partner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DellEMC</fullName>
                </value>
                <value>
                    <fullName>Dell Commercial</fullName>
                </value>
                <value>
                    <fullName>VMWare Enterprise</fullName>
                </value>
                <value>
                    <fullName>VMWare Commercial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Integrator1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>System Integrator?</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (System Integrator?)</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>